Changes in robustHD version 0.8.0

    + Removed deprecated functions.

    + Added rstandard() method for standardized residuals rather than
      residuals(standardize = TRUE).

    + Added DOI's to references in help files.



Changes in robustHD version 0.7.4

    + Bugfix in C++ code: deprecated argument of insert_rows() and
      insert_cols() no longer used.


Changes in robustHD version 0.7.3

    + Bugfix in sparseLTS(): function calls for fitting the model on training
      sets (when selecting lambda via prediction error estimation) are now
      evaluated in the correct environment.


Changes in robustHD version 0.7.2

    + Added CITATION file.

    + Added reference to JOSS paper in package help file.

    + Added URL and BugReports fields to DESCRIPTION file.


Changes in robustHD version 0.7.1

    + Unit tests are now run automatically with R CMD check.

    + Help file of sparseLTS() now correctly documents that arguments for
      selecting the optimal value of the penalty parameter are ignored if
      only one value of the penalty parameter is supplied.


Changes in robustHD version 0.7.0

    + Re-implemented plots and added functions setupCoefPlot(),
      setupCritPlot(), and setupDiagnosticPlot() to extract all
      the relevant information.

    + Removed deprecated functions.

    + Function partialOrder() for finding the order of the smallest or
      largest values of a vector is now exported.

    + Added NCI-60 cancer cell panel data.

    + Added coef(), fitted(), and residuals() methods for objects of class
      "perrySeqModel".

    + Updated broken links in documentation.



Changes in robustHD version 0.6.1

    + Internal C++ functions for testing are now properly registered.


Changes in robustHD version 0.6.0

    + Method for function weights() is now used to retrieve robustness weights
      from objects of class "sparseLTS" (with argument type = "robustness").

    + C++ functions are now properly registered.
